Updated ghetto-box to fix alignment issue

--- a/styl/ghetto-box/layout.styl
+++ b/styl/ghetto-box/layout.styl
@@ -9,7 +9,6 @@ img
 	vertical-align top
 
 .tile
-	text-align left
 	vertical-align top
 	display inline-block
 
@@ -36,8 +35,12 @@ img
 	display table-row
 
 .table-cell
-	vertical-align top
 	display table-cell
+	vertical-align top
+
+.tiles
+	& > *
+		text-align left
 
 .tiles-left
 	text-align left
